add_subdirectory(ref_sssp)
add_subdirectory(approx_sssp)
add_subdirectory(approx_sssp_norecovery)
add_subdirectory(approx_sssp_sel_push_temporal)  
add_subdirectory(approx_sssp_sel_push_extreme) 
add_subdirectory(approx_sssp_sel_push_extreme2) 
add_subdirectory(approx_sssp_sel_push_extreme3) 
add_subdirectory(approx_sssp_val) 
add_subdirectory(ref_bfs)
add_subdirectory(approx_bfs_norecovery)
#add_subdirectory(approx_bfs_norecovery)
#add_subdirectory(approx_bfs_sel_push)  
#add_subdirectory(approx_bfs_sel_push_temporal)  
#add_subdirectory(approx_bfs_sel_push2)
add_subdirectory(approx_bfs_sel_push_extreme)        
#add_subdirectory(approx_bfs_sel_push_extreme2)  needs to be more aggressive       
add_subdirectory(approx_bfs_val)
add_subdirectory(approx_sssp_combo)
add_subdirectory(approx_bfs_combo) 
add_subdirectory(approx_pr_cas)
add_subdirectory(ref_pr)
